# Simpleton

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  CONTRIBUTING.md  GenerateVS2019.bat  GenerateVS2022.bat  GetLatest.bat  LaunchVS2019.bat  README.md  SetupDependencies.bat
.github/workflows/: CMake_Win64.yml  cmake.yml  cmake_win64.yml
Data/Models/BricksCube/: Cube.mtl
Data/Models/Crate/: Crate.mtl
Data/Models/Cube/: Cube.fbx  Cube.mtl
Data/Models/Planet/: Planet.mtl
Data/Shaders/: CubeVertexShader.glsl  DefaultFragmentShader.glsl  DefaultVertexShader.glsl  ModelFragmentShader.glsl  ModelVertexShader.glsl  NormalFragmentShader.glsl  NormalVertexShader.glsl  NormalsFragmentShader.glsl  NormalsVertexShader.glsl  RedVertexShader.glsl
Scripts/: InitSubmodules.bat  UpdateSubmodules.bat
Source/: CMakeLists.txt
Source/Applications/: CMakeLists.txt
Source/Applications/Sandbox/: CMakeLists.txt  Main.cpp
Source/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorOverlay.cpp  EditorOverlay.h  Main.cpp  main.cpp
Source/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
Source/Engine/Component/: ModelComponent.h
Source/Engine/Core/: Assert.h  DataManager.cpp  DataManager.h  Engine.cpp  Engine.h  EngineContext.cpp  EngineContext.h  EngineDefines.h  EngineSettings.cpp  EngineSettings.h  InputManager.cpp  Log.h  Logger.cpp  Logger.h  SerializableData.h  Subsystem.h  Time.h  Timer.h  TypeDefines.h
Source/Engine/Core/ECS/: CameraComponent.cpp  CameraComponent.h  ComponentArray.h  ComponentArrayBase.h  ComponentManager.cpp  ComponentManager.h  Entity.cpp  Entity.h  EntityComponentSystem.cpp  EntityComponentSystem.h  EntityManager.cpp  EntityManager.h  EntitySystemBase.h  EntitySystemManager.cpp  EntitySystemManager.h  MeshComponent.h  TransformComponent.h
Source/Engine/ECS/: Component.h  Entity.cpp  Entity.h  EntityComponentSystem.cpp  EntityComponentSystem.h  ModelComponent.h  TransformComponent.h
Source/Engine/ECS/Core/: ComponentArray.h  ComponentArrayBase.h  ComponentManager.cpp  ComponentManager.h  Coordinator.cpp  Coordinator.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.cpp  SystemManager.h  Types.h
Source/Engine/ECS/Systems/: PhysicsSystem.cpp  PhysicsSystem.h
Source/Engine/Element/: Component.h
Source/Engine/Gameplay/: AbilitySystem.cpp  AbilitySystem.h
Source/Engine/Gameplay/Subsystem/: AbilitySystem.cpp  AbilitySystem.h  EventSystem.h
Source/Engine/Graphics/: GraphicsDefines.h  Model.h  RenderContext.h  RenderSurface.cpp  RenderSurface.h  Shader.h  ShaderLibrary.h  Texture.h  TextureLibrary.h  VectorUtilities.h  Yellowstone.cpp  Yellowstone.h
Source/Engine/Graphics/OpenGL/: Console.h  ConsoleO.cpp  ConsoleO.h  GLError.h  ImguiDebugWidget.cpp  ImguiDebugWidget.h  ImguiTitleBar.cpp  ImguiTitleBar.h  ImguiWrapper.cpp  ImguiWrapper.h  InputManager.cpp  InputManager.h  OpenGLError.h  OpenGLRenderContext.cpp  OpenGLRenderContext.h  OpenGLRenderSurface.cpp  OpenGLRenderSurface.h  OpenGLShaderLibrary.cpp  OpenGLShaderLibrary.h  OpenGLTextureLibrary.cpp  OpenGLTextureLibrary.h  RenderContext.cpp  RenderContext.h  RenderSurface.cpp  RenderSurface.h  ShaderLibrary.cpp  ShaderLibrary.h  TextureLibrary.cpp  TextureLibrary.h
Source/Engine/Graphics/UI/: CameraWidget.cpp  CameraWidget.h  Console.cpp  Console.h  ConsoleWidget.cpp  ConsoleWidget.h  ImguiExtension.h  ImguiWrapper.cpp  ImguiWrapper.h  MenuBar.cpp  MenuBar.h  Overlay.cpp  Overlay.h  ToolMenuBar.cpp  ToolMenuBar.h  Toolbar.cpp  Toolbar.h  Widget.cpp  Widget.h  WidgetIconType.h
Source/Engine/Graphics/Vulkan/: VulkanRenderSurface.cpp  VulkanRenderSurface.h  VulkanShaderLibrary.cpp  VulkanShaderLibrary.h
Source/Engine/Subsystem/: JobSystem.cpp
Source/Engine/Subsystem/Renderer/: AssetLoader.cpp  AssetLoader.h  Camera.h  ImguiTitleBar.cpp  ImguiTitleBar.h  ImguiWrapper.cpp  RenderContext.h  RenderSurface.cpp  ShaderLibrary.h  TextureLibrary.cpp  TextureLibrary.h  World.cpp
Source/Engine/System/: AdvancedRenderer.h  EntityComponentSystem.cpp  EntityComponentSystem.h  JobSystem.cpp  OpenGLRenderer.cpp  OpenGLRenderer.h  Renderer.h
Source/Engine/Threading/: JobSystem.cpp  JobSystem.h
Source/Engine/Utility/: Logger.h
Source/Engine/World/: AssetLoader.cpp  AssetLoader.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  Component.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  LightingComponent.cpp  LightingComponent.h  MeshComponent.h  TransformComponent.cpp  TransformComponent.h  World.cpp  World.h
source/: Engine.cpp  Engine.h  JobSystem.cpp  JobSystem.h  Timer.h  main.cpp
source/Component/: ModelComponent.h  TransformComponent.cpp  TransformComponent.h
source/Element/: Component.cpp  Component.h  Entity.h
source/Renderer/: Yellowstone.cpp  Yellowstone.h
source/Subsystem/: AbilitySystem.cpp  AbilitySystem.h  EntityComponentSystem.cpp  EntityComponentSystem.h  JobSystem.cpp  JobSystem.h  MoveSystem.cpp  MoveSystem.h
source/Subsystem/Renderer/: AssetLoader.cpp  AssetLoader.h  Camera.cpp  Camera.h  Console.cpp  Console.h  GLError.h  ImguiTitleBar.cpp  ImguiTitleBar.h  ImguiWrapper.cpp  ImguiWrapper.h  InputManager.cpp  InputManager.h  Light.h  Mesh.h  Model.cpp  Model.h  RenderContext.cpp  RenderContext.h  RenderSurface.cpp  RenderSurface.h  Renderer.cpp  Renderer.h  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.h  TextureLibrary.cpp  TextureLibrary.h  VectorUtilities.h  Vertex.h  World.cpp  World.h
source/Subsystem/Yellowstone/: Camera.h  GLError.h  Model.cpp  Model.h  RenderContext.cpp  RenderContext.h  RenderSurface.cpp  RenderSurface.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.h  Vertex.h  Yellowstone.cpp  Yellowstone.h
source/Utility/: Assert.h  Logger.h  Timer.h
vs/: Simpleton.sln  Simpleton.vcxproj  Simpleton.vcxproj.filters
