cmake_minimum_required(VERSION 3.7.0)

set(CMAKE_CXX_STANDARD 17)
add_definitions(-DUNICODE)
set_property(GLOBAL PROPERTY CMAKE_CXX_STANDARD_REQUIRED ON)
set_property(GLOBAL PROPERTY CMAKE_CXX_EXTENSIONS OFF)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Binaries)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Libraries)

set(DEP_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Dependencies")

project(Simpleton CXX)

add_subdirectory(Source)

set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT "Editor")
